# tax_loss_direct_indexing

./: .gitignore  LICENSE  README.md  README.rst  project.toml  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
backend/: app.py  auth.py  base.py
backend/static/: style.css
backend/templates/: base.html
backend/templates/auth/: login.html
backend/templates/portfolio/: index.html
cfgs/: config.yaml  flask_config.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  PlotlyTemplate.js  index.js
scripts/: add_trades_to_db.py  create_db.py  download_data.py  get_ibkr_conids_for_tickers.py  liquidate_portfolio.py  print_trades.py  rebuild_blacklist_from_db.py  repair_portfolio.py  save_nav_and_cash_changes.py
tax_loss/: __init__.py  cli.py  db.py  email.py  gateway.py  optimizer.py  portfolio.py  strategy.py  trade.py  util.py
tests/: __init__.py  conftest.py  test_gateway.py  test_strategy.py  test_tax_loss.py  test_util.py  trade_test.py
tests/resources/: IVV_weights.parquet  portfolio.json  ticker_blacklist.json  weights.json  weights20220920_2033.json  weights20220928_1104.json  weights_extra_ticker.json  yf_tickers.parquet
