[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true


[tool.poetry]
name = "tax_loss"
version = "0.1.0"
description = "n/a"
authors = ["Trevor Bernard <trevor.s.bernard@gmail.com>"]

[tool.poetry.scripts]
tax_loss = "tax_loss.cli:main"
add_trades_to_db = "scripts.add_trades_to_db:main"
download_data = "scripts.download_data:main"

[tool.poetry.dependencies]
python = "~3.9"
scipy = "^1.7.3"
click = "^8.1.3"
munch = "^2.5.0"
PyYAML = "^6.0"
pandas = "^1.4.3"
numpy = "^1.23.2"
tabulate = "^0.8.10"
fastparquet = "^0.8.2"
yfinance = "^0.1.74"
requests = "^2.28.1"
bokeh = {version = "^2.4.3", optional = true}
jupyter = {version = "^1.0.0", optional = true}
Flask = "^2.2.2"

[tool.poetry.extras]
jupyter = ["jupyter", "bokeh"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.0"
invoke = "^1.7.1"
mypy = "^0.971"
types-tabulate = "^0.8.11"
types-requests = "^2.28.9"
flake8-mutable = "^1.2.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.10.0"
freezegun = "^1.2.2"
mock = "^4.0.3"
types-mock = "^4.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
